Fix nav flex-wrap for all items to show

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ nav ul {
     margin: 0;
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 nav li {
